--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^1.1.2
   path: ^1.8.3
   sqflite: ^2.3.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
