--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   http: ^1.1.2
   path: ^1.8.3
+  path_provider: ^2.1.2
   sqflite: ^2.3.0
   web_socket_channel: ^2.4.0
 
